2010-09-24 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51/XC866.h: fixed copy & paste error in the comment

2010-09-22 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51/XC866.h, device/include/mcs51/reg764.h,
	  device/include/mcs51/at89s8253.h:
	  sdcc library license changed to GPL+LE

2010-09-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/doc/sdccman.lyx:
	  Fixed #3071726.

2010-09-19 Borut Razem <borut.razem AT siol.net>

	* support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk:
	  fixed mingw32 cross compiled regression tests:
	  include top source directory when cross compiling,
	  launch win32 native simulator with wine,
	  removed wrong quotes, call build machine native timeout utility
	* src/SDCCmain.c, src/ds390/main.c:
	  ds390 default library path was wrong
	* src/SDCC.lex: implemented punctuators, as defined in
	  ISO/IEC 9899:1999, chapter 6.4.6#3
	  support/regression/tests/preproc.c: punctuators regression test

2010-09-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (geniCodeJumpTable): fixed bug 3069862
	* support/regression/tests/bug2947189.c: new, added

2010-09-18 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/cmd.c:
	  fixed warning: suggest explicit braces to avoid ambiguous ‘else’

2010-09-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/doc/sdccman.lyx:
	  Minor update in ANSI conformance section.

2010-09-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (ast_print): fixed for MSVC
	* src/SDCCicode.c (geniCodeJumpTable): fixed bug 2947189
	* support/librarian/sdcclib.c: test return values of system and fgets

2010-09-13 Borut Razem <borut.razem AT siol.net>

	* device/lib/_divulong.c, device/lib/_decdptr.c, device/lib/_divuint.c,